// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details Panel Component DetailsPanel: rendering it should not render the DetailsPanel if an expanded detail with a panelView, but not params have been set: 
        <DetailsPanel
          browserFields={Object {}}
          handleOnPanelClosed={[MockFunction]}
          isFlyoutView={false}
          runtimeMappings={Object {}}
          tabType="query"
          scopeId="timeline-test"
        />
       1`] = `
<DetailsPanel
  browserFields={Object {}}
  handleOnPanelClosed={[MockFunction]}
  isFlyoutView={false}
  runtimeMappings={Object {}}
  scopeId="timeline-test"
  tabType="query"
/>
`;

exports[`Details Panel Component DetailsPanel: rendering it should not render the DetailsPanel if no expanded detail has been set in the reducer 1`] = `
<DetailsPanel
  browserFields={Object {}}
  handleOnPanelClosed={[MockFunction]}
  isFlyoutView={false}
  runtimeMappings={Object {}}
  scopeId="timeline-test"
  tabType="query"
/>
`;

exports[`Details Panel Component DetailsPanel:EventDetails: rendering it should render the Event Details Panel when the panelView is set and the associated params are set 1`] = `
Array [
  .c0 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-top: 8px;
}

<div
    class="euiFlexGroup c0 emotion-euiFlexGroup-responsive-wrap-none-spaceBetween-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexEnd-column"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <button
            aria-label="close"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />,
  <div
    aria-busy="true"
    data-test-subj="euiSkeletonLoadingAriaWrapper"
  >
    <span
      aria-label="Loading "
      class="euiSkeletonText"
      role="progressbar"
    >
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
    </span>
  </div>,
  .c0 .side-panel-flyout-footer {
  background-color: transparent;
}

<div
    class="euiPanel euiPanel--plain euiPanel--paddingMedium c0 emotion-euiPanel-grow-none-m-plain"
  >
    <div
      class="euiFlyoutFooter side-panel-flyout-footer emotion-euiFlyoutFooter"
      data-test-subj="side-panel-flyout-footer"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexEnd-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Details Panel Component DetailsPanel:EventDetails: rendering it should render the Event Details view of the Details Panel in the flyout when the panelView is eventDetail and the eventId is set 1`] = `
.c0 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-top: 8px;
}

.c1 .euiFlyoutBody__overflow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.c1 .euiFlyoutBody__overflow .euiFlyoutBody__overflowContent {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  padding: 0 12px 12px;
}

.c2 .side-panel-flyout-footer {
  background-color: transparent;
}

<div
  data-eui="EuiFlyout"
  data-test-subj="timeline:details-panel:flyout"
  role="dialog"
>
  <button
    aria-label="Close this dialog"
    data-test-subj="euiFlyoutCloseButton"
    type="button"
  />
  <div
    class="euiFlyoutHeader emotion-euiFlyoutHeader"
  >
    <div
      class="euiFlexGroup c0 emotion-euiFlexGroup-responsive-wrap-none-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      />
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexEnd-column"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlyoutBody c1 emotion-euiFlyoutBody"
  >
    <div
      class="euiFlyoutBody__overflow css-18yrfj9-noBanner"
      tabindex="0"
    >
      <div
        class="euiFlyoutBody__overflowContent"
      >
        <div
          aria-busy="true"
          data-test-subj="euiSkeletonLoadingAriaWrapper"
        >
          <span
            aria-label="Loading "
            class="euiSkeletonText"
            role="progressbar"
          >
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingMedium c2 emotion-euiPanel-grow-none-m-plain"
  >
    <div
      class="euiFlyoutFooter side-panel-flyout-footer emotion-euiFlyoutFooter"
      data-test-subj="side-panel-flyout-footer"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexEnd-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Details Panel Component DetailsPanel:HostDetails: rendering it should render the Host Details view in the Details Panel when the panelView is hostDetail and the hostName is set 1`] = `
.c3 {
  color: #98a2b3;
}

.c2 {
  word-break: break-word;
}

.c2 dt {
  font-size: 12px !important;
}

.c2 dd {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c2 dd > div {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  position: relative;
}

.c1 .euiButtonIcon {
  position: absolute;
  right: 12px;
  top: 6px;
  z-index: 2;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 > * {
  max-width: 100%;
}

.c0 .inspectButtonComponent {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 250ms ease;
  transition: opacity 250ms ease;
}

.c0 .inspectButtonComponent:focus-visible {
  pointer-events: auto;
  opacity: 1;
}

.c0:hover .inspectButtonComponent {
  pointer-events: auto;
  opacity: 1;
}

.c4 {
  padding: 12px;
  background: rgba(250,251,253,0.9);
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1000;
}

.c5 {
  height: 100%;
}

<div
  class="c0"
  data-test-subj="hoverVisibilityContainer"
>
  <div
    class="euiFlexGroup c1 emotion-euiFlexGroup-l-flexStart-stretch-column"
    data-test-subj="host-overview"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList c2 emotion-euiDescriptionList-row-left"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          First seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Last seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList c2 emotion-euiDescriptionList-row-left"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          IP addresses
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          MAC addresses
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Platform
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList c2 emotion-euiDescriptionList-row-left"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Operating system
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Family
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Version
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Architecture
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList c2 emotion-euiDescriptionList-row-left"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Cloud provider
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Region
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Instance ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Machine type
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
      </dl>
    </div>
    <aside
      class="c4"
    >
      <div
        class="euiFlexGroup c5 emotion-euiFlexGroup-s-center-center-column"
        overlay="[object Object]"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-xl"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </div>
      </div>
    </aside>
  </div>
</div>
`;

exports[`Details Panel Component DetailsPanel:NetworkDetails: rendering it should render the Network Details view in the Details Panel when the panelView is networkDetail and the ip is set 1`] = `
.c3 {
  color: #98a2b3;
}

.c2 {
  word-break: break-word;
}

.c2 dt {
  font-size: 12px !important;
}

.c2 dd {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c2 dd > div {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  position: relative;
}

.c1 .euiButtonIcon {
  position: absolute;
  right: 12px;
  top: 6px;
  z-index: 2;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 > * {
  max-width: 100%;
}

.c0 .inspectButtonComponent {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 250ms ease;
  transition: opacity 250ms ease;
}

.c0 .inspectButtonComponent:focus-visible {
  pointer-events: auto;
  opacity: 1;
}

.c0:hover .inspectButtonComponent {
  pointer-events: auto;
  opacity: 1;
}

.c4 {
  padding: 12px;
  background: rgba(250,251,253,0.9);
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1000;
}

.c5 {
  height: 100%;
}

<div
  class="c0"
  data-test-subj="hoverVisibilityContainer"
>
  <div
    class="euiFlexGroup c1 emotion-euiFlexGroup-l-flexStart-stretch-column"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList c2 emotion-euiDescriptionList-row-left"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Location
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Autonomous system
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList c2 emotion-euiDescriptionList-row-left"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          First seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Last seen
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList c2 emotion-euiDescriptionList-row-left"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host ID
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Host name
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="c3"
          >
            —
          </span>
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <dl
        class="euiDescriptionList c2 emotion-euiDescriptionList-row-left"
        data-type="row"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          WhoIs
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <a
              class="euiLink emotion-euiLink-primary"
              data-test-subj="externalLink"
              href="https://www.iana.org/whois?q=woohoo!"
              rel="noopener noreferrer"
              target="_blank"
            >
              iana.org
              <span
                class="emotion-EuiExternalLinkIcon"
                data-euiicon-type="popout"
              >
                External link
              </span>
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (opens in a new tab or window)
              </span>
            </a>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-row-normal-s"
        >
          Reputation
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-row-normal"
        />
      </dl>
    </div>
    <aside
      class="c4"
    >
      <div
        class="euiFlexGroup c5 emotion-euiFlexGroup-s-center-center-column"
        overlay="[object Object]"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner emotion-euiLoadingSpinner-xl"
            data-test-subj="loading-spinner"
            role="progressbar"
          />
        </div>
      </div>
    </aside>
  </div>
</div>
`;
